Run pantheon-wordpress-upstream tests

--- a/composer.json
+++ b/composer.json
@@ -56,8 +56,8 @@
     "behat/behat": "^3.1",
     "behat/mink-extension": "^2.2",
     "behat/mink-goutte-driver": "^1.2",
-    "pantheon-systems/pantheon-wordpress-upstream-tests": "dev-master",
-    "paulgibbs/behat-wordpress-extension": "dev-master",
+    "pantheon-systems/pantheon-wordpress-upstream-tests": "dev-wordhat",
+    "paulgibbs/behat-wordpress-extension": "0.7.0",
     "squizlabs/php_codesniffer": "*",
     "wp-coding-standards/wpcs": "dev-master",
     "phpunit/phpunit": "^6.1",
