--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,8 @@ machine:
       # line of other steps. Each CircleCI command runs in a separate shell.
       WORDPRESS_ADMIN_PASSWORD: $(cat ~/WORDPRESS_ADMIN_PASSWORD)
       RUN_BEHAT_BUILD: true
+      BEHAT_ENV: "test"
+      BEHAT_TEST_URL: "https://test-pantheon-wp-best-practices.pantheonsite.io/"
 
   # This will be added to the `/etc/hosts` file
   hosts:
